...
                  textAlignVertical: TextAlignVertical.center,
                  decoration: const InputDecoration(hintText: 'Enter Game Code'),
                  onChanged: gameClient.setGameCode,
                ),
              ),
              const SizedBox(height: 20),
              ElevatedButton(onPressed: gameClient.joinGame, child: const Text('Join Game')),
            ],
            if (allGames != null)
              for (final info in allGames)
                ElevatedButton(
                  onPressed: () async {
                    gameClient.setGameCode(info.gameID);
...
            if (gameStatus == GameStatus.betweenRounds && !g.readyPlayers.contains(playerID)) ...[
              const SizedBox(height: 20),
              ElevatedButton(
                onPressed: () async {
                  final _ = await ref.read(roundClientProvider).newRound();
                },
                child: const Text('Next Round'),
              ),
            ],
          ],
        ),
      ),
    );
...
